--- a/cv/src/main/resources/static/css/output.css
+++ b/cv/src/main/resources/static/css/output.css
@@ -558,12 +558,21 @@ video {
   display: table;
 }
 
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity));
+.bg-amber-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 191 36 / var(--tw-bg-opacity));
 }
 
-.text-red-600 {
+.text-center {
+  text-align: center;
+}
+
+.text-cyan-300 {
   --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
+  color: rgb(103 232 249 / var(--tw-text-opacity));
+}
+
+.text-amber-400 {
+  --tw-text-opacity: 1;
+  color: rgb(251 191 36 / var(--tw-text-opacity));
 }
