--- a/cv/src/main/resources/templates/login_logout/signin.html
+++ b/cv/src/main/resources/templates/login_logout/signin.html
@@ -6,8 +6,8 @@
     <title>Login</title>
 </head>
 <body>
-<link rel="stylesheet" data-th-href="@{'/css/output.css'}" type="text/css">
-<h2 class="text-red-600">Login</h2>
+<link rel="stylesheet" href="/css/output.css"  type="text/css">
+<h2 class="bg-amber-400 text-center">Login</h2>
 <form action="/public/si1" method="post">
     <div>
         <label for="username">Username:</label>
@@ -19,7 +19,7 @@
     </div>
     <button type="submit">Login</button>
 </form>
-    <a href="/public/sinnup">Chua co tai khoan</a>
+    <a href="/public/sinnup" class="text-amber-400 text-center">Chua co tai khoan</a>
 
 </body>
 </html>
