--- a/cv/src/main/resources/templates/login_logout/signup.html
+++ b/cv/src/main/resources/templates/login_logout/signup.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Form</title>
-    <link rel="stylesheet" href="/css/output.css">
+    <link rel="stylesheet" th:href="@{/static/output.css}" type="text/css">
 </head>
 <body>
-<h2 class="text-">Signup Form</h2>
+<h2 class="text-lime-500">Signup Form</h2>
 <form action="/public/si2" method="post">
     <div>
         <label for="name">Name:</label>
