--- a/cv/src/main/resources/templates/login_logout/signin.html
+++ b/cv/src/main/resources/templates/login_logout/signin.html
@@ -5,22 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 <!--    <link th:href="@{/output.css}" rel="stylesheet" />-->
-    <link rel="stylesheet" th:href="@{/output.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/output.css}">
 </head>
 <body>
-<h2 class="mt-1">Login</h2>
-<form action="/public/si1" method="post">
-    <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-    </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-    </div>
-    <button type="submit">Login</button>
-</form>
-    <a href="/public/sinnup" class="text-amber-400 text-center">Chua co tai khoan</a>
+    <div class="w-64 mx-auto mt-8 p-6 bg-white rounded-lg shadow-md">
+    <h2 class="text-2xl font-bold mb-4">Đăng nhập</h2>
+        <form action="/public/si1" method="post">
+            <div class="mb-4">
+                <label for="username" class="block text-gray-700 font-semibold mb-2">Tên người dùng</label>
+                <input type="text" id="username" name="username" class="border-2 border-gray-300 rounded-md px-3 py-2 w-full focus:outline-none focus:border-blue-500 disabled:bg-red-600" required>
+            </div>
+            <div class="mb-6">
+                <label for="password" class="block text-gray-700 font-semibold mb-2">Mật khẩu</label>
+                <input type="password" id="password" name="password" class="border-2 border-gray-300 rounded-md px-3 py-2 w-full focus:outline-none focus:border-blue-500 invalid:border-red-500" required>
+            </div>
+            <button type="submit" class="bg-blue-500 text-white font-semibold py-2 px-4 rounded hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Đăng nhập</button>
+        </form>
+            <a href="/public/sinnup" class="text-amber-400 py-1 border-2 p-1 block mt-3">Chua co tai khoan</a>
+    </div>  
 
 </body>
 </html>
