21-5 chinh sua phan view cho admin add delete

--- a/cv/src/main/resources/templates/Home/Admin/create.html
+++ b/cv/src/main/resources/templates/Home/Admin/create.html
@@ -35,5 +35,6 @@
             <button type="submit">Add Product</button>
         </div>
     </form>
+    <a th:href="@{/admin/Home}">Home</a>
 </body>
 </html>
