--- a/cv/src/main/resources/templates/foodter.html
+++ b/cv/src/main/resources/templates/foodter.html
@@ -7,6 +7,7 @@
 <body>
         <footer th:fragment="footer">
             <h1>day la footer</h1>
+            <img src="../static/img/pexels-jae-park-4984313.jpg" width="100px" alt="view">
         </footer>
 </body>
 </html>
