--- a/cv/src/main/resources/templates/fragments/foodter.html
+++ b/cv/src/main/resources/templates/fragments/foodter.html
@@ -6,8 +6,9 @@
 </head>
 <body>
         <footer th:fragment="footer">
-            <h1>day la footer</h1>
-            <img src="../static/img/pexels-jae-park-4984313.jpg" width="100px" alt="view">
+            <div class="h-20">
+                <h1>footer</h1>
+            </div>
         </footer>
 </body>
 </html>
