--- a/cv/src/main/resources/templates/Home/Admin/view.html
+++ b/cv/src/main/resources/templates/Home/Admin/view.html
@@ -43,6 +43,9 @@
             </tr>
         </tbody>
     </table>
-    <a th:href="@{/admin/create}" class="text-center">Create</a>
+    <div>
+        <a th:href="@{/admin/create}" class="text-center">Create</a>
+        <a class="pl-4" th:href="@{/user/Home}">Trang Chu</a>
+    </div>
 </body>
 </html>
