--- a/cv/src/main/resources/templates/fragments/Header.html
+++ b/cv/src/main/resources/templates/fragments/Header.html
@@ -8,7 +8,7 @@
         <header th:fragment="header">
             <nav class="flex justify-around h-20">
                 <ul class="flex space-x-4 pt-4">
-                    <li class="hover:underline"><a href="#">Vào Cửa Hàng</a></li>
+                    <li class="hover:underline"><a th:href="@{/user/Home}">Vào Cửa Hàng</a></li>
                     <li class="flex space-x-2">
                         <span>Kết Nối</span>
                         <a href="https://www.facebook.com/profile.php?id=61556964275307" class="text-blue-600">
