--- a/cv/src/main/resources/templates/fragments/foodter.html
+++ b/cv/src/main/resources/templates/fragments/foodter.html
@@ -6,9 +6,16 @@
 </head>
 <body>
         <footer th:fragment="footer">
-            <div class="h-20">
-                <h1>footer</h1>
+            <div class="h-full p-2 text-cyan-200 pl-28">
+                <h1 >Trường Đại Học Khoa Hoc</h1>
+                <h1 >Địa Chỉ : 38 Đống Đa </h1>
+                <h1 >Email : 22T1020568@husc.edu.vn</h1>
+                <h1 >Liên Hệ : 0327800381</h1>
+                <h1 >Đây là Project Web Đầu Tay</h1>
             </div>
+            <!-- <div class="w-10 h-10">
+                <img th:src="../../static/img/thiet-ke-web-ban-hang-online-3.jpg" alt="">
+            </div> -->
         </footer>
 </body>
 </html>
