--- a/cv/src/main/resources/templates/Home/User/view.html
+++ b/cv/src/main/resources/templates/Home/User/view.html
@@ -9,15 +9,32 @@
     </head>
     <body>
         <div>
-            <div th:include="fragments/Header :: header" class="bg-green-400"></div>
+            <div th:insert="~{fragments/Header :: header}" class="bg-green-400"></div>
             <div class="flex h-3/4">
                 <!-- Sidebar -->
-                <div class=" bg-slate-500 w-1/4 h-screen"></div>
-                
-                <!-- Main Content Area -->
+                <div class="w-1/4 h-full">
+                    <form action="/user/loc" method="post">
+                        <h3 class="m-1">Hảng Sản Xuất</h3>
+                        <div class="flex">
+                            <div class="p-3 pt-1">
+                                <input id="checkbox" type="checkbox" name="options" value="R8" class="form-checkbox mt-1 h-4 w-4 text-green-500 rounded focus:ring-2">
+                                <label for="checkbox" class="pl-1">R8</label>
+                            </div>
+                            <div class="p-3 pt-1">
+                                <input id="checkbox" type="checkbox" name="options" value="BMW" class="form-checkbox mt-1 h-4 w-4 text-green-500 rounded focus:ring-2">
+                                <label for="checkbox" class="pl-1">BMW</label>
+                            </div>
+                            <div class="p-3 pt-1">
+                                <input id="checkbox" type="checkbox" name="options" value="AuDi" class="form-checkbox mt-1 h-4 w-4 text-green-500 rounded focus:ring-2">
+                                <label for="checkbox" class="pl-1">AuDi</label>
+                            </div>
+                        </div>
+                        <button type="submit" class="p-1 border-black rounded-3xl m-auto border">Loc Sp</button>
+                    </form>
+                </div>
                 <div class="bg-slate-50 w-3/4 h-screen ">
                     <!-- Search Form -->
-                    <form action="find" method="post" class="flex items-center bg-slate-400 p-4 rounded-md">
+                    <form action="/user/find" method="post" class="flex items-center bg-slate-400 p-4 rounded-md">
                         <label for="username" class="text-gray-700 font-semibold mb-2 px-2">Tìm Kiếm</label>
                         <input type="text" id="username" name="username" class="border-2 border-gray-300 rounded-l-2xl px-3 py-1 ml-2 w-3/4 focus:outline-none focus:border-blue-500">
                         <button type="submit" class="bg-slate-100 px-4 py-1 rounded-r-2xl border-2 border-gray-300 focus:outline-none focus:border-blue-500">
@@ -26,19 +43,22 @@
                     </form>
                     
                     <!-- Product Grid -->
-                    <div class="grid grid-cols-3 grid-rows-2 gap-4 p-4 flex-grow">
+                    <div class="grid grid-cols-4 gap-4 flex-grow mt-6">
                         <!-- Loop through products -->
-                        <div th:each="product : ${find}" class="bg-slate-400 p-4 rounded-md">
-                            <img th:src="@{'/static/img/' + ${product.imageFileName}}" alt="" class="w-full rounded">
+                        <div th:each="product : ${find}" class="bg-slate-300 border-orange-300 border-2 p-4 rounded-2xl w-full h-56">
+                            <div class="w-full h-4/5">
+                                <img th:src="@{'/static/img/' + ${product.imageFileName}}" alt="" class="w-full rounded h-full">
+                            </div>
                             <div class="mt-2">
                                 <h4 th:text="${product.name}" class="text-lg font-semibold text-center"></h4>
                                 <p th:text="'Price: ' + ${product.price}" class="text-sm text-gray-700 text-center"></p>
                             </div>
                         </div>
-                    </div>
+                    </div>    
+                    
                 </div>                
             </div>
-            <div th:include="fragments/foodter :: footer" class="bg-red-500"></div>
+            <div th:insert="~{fragments/foodter :: footer}" class="bg-slate-600"></div>
         </div>
     </body>
 </html>
